--- a/course-project/src/main/resources/log4j.properties
+++ b/course-project/src/main/resources/log4j.properties
@@ -6,3 +6,11 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.conversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+
+ # Define the root logger with appender X  
+ log4j.rootLogger = DEBUG,stdout,fout
+ #Direct log messages to stdout  
+ log4j.appender.stdout=org.apache.log4j.ConsoleAppender  
+ log4j.appender.stdout.Target=System.out  
+ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout  
+ log4j.appender.stdout.layout.conversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
