--- a/my-project/src/main/webapp/WEB-INF/web.xml
+++ b/my-project/src/main/webapp/WEB-INF/web.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" version="3.1">
-  <display-name>my-project</display-name>
-  	
-  	<listener>
+  <display-name>course-project</display-name>
+ 	<listener>
   		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   	</listener>
-  	
-  	<context-param>
+	
+	<context-param>
   		<param-name>contextConfigLocation</param-name>
   		<param-value>/WEB-INF/spring/applicationContext.xml</param-value>
   	</context-param>
@@ -21,7 +20,7 @@
   		<load-on-startup>1</load-on-startup>
   	</servlet>
   	
-  	<servlet-mapping>
+ 	<servlet-mapping>
   		<servlet-name>dispatcher</servlet-name>
   		<url-pattern>/</url-pattern>
   	</servlet-mapping>
