--- a/spring-aop-project/.classpath
+++ b/spring-aop-project/.classpath
@@ -27,6 +27,6 @@
 	<classpathentry kind="lib" path="lib/spring-webmvc-5.1.8.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/spring-websocket-5.1.8.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/spring-asm-3.1.4.RELEASE.jar"/>
-	<classpathentry kind="lib" path="D:/My Projects/springmvc/spring-aop-project/lib/cglib-3.2.12.jar"/>
+	<classpathentry kind="lib" path="lib/cglib-3.2.12.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
