--- a/newsfeed/src/main/webapp/WEB-INF/web.xml
+++ b/newsfeed/src/main/webapp/WEB-INF/web.xml
@@ -11,9 +11,25 @@
 		<servlet-name>home</servlet-name>
 		<servlet-class>org.javaimplant.newsfeed.Servlets.HomeServlet</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>newsfeed</servlet-name>
+		<servlet-class>org.javaimplant.newsfeed.Servlets.NewsFeedServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>news</servlet-name>
+		<servlet-class>org.javaimplant.newsfeed.Servlets.NewsServlet</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>home</servlet-name>
 		<url-pattern>/home</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>newsfeed</servlet-name>
+		<url-pattern>/news.rss</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>news</servlet-name>
+		<url-pattern>/news</url-pattern>
 	</servlet-mapping>
 	<resource-ref>
 		<description>dataSource</description>
