--- a/newsfeed/src/main/webapp/WEB-INF/web.xml
+++ b/newsfeed/src/main/webapp/WEB-INF/web.xml
@@ -4,13 +4,21 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
-  	<listener>
+    	<listener>
 		<listener-class>org.javaimplant.newsfeed.Init.Init</listener-class>
 	</listener>
 	<servlet>
 		<servlet-name>home</servlet-name>
 		<servlet-class>org.javaimplant.newsfeed.Servlets.HomeServlet</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>data</servlet-name>
+		<servlet-class>org.javaimplant.newsfeed.Servlets.DataSourceServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>data</servlet-name>
+		<url-pattern>/data</url-pattern>
+	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>home</servlet-name>
 		<url-pattern>/home</url-pattern>
