--- a/newsfeed/src/main/webapp/WEB-INF/web.xml
+++ b/newsfeed/src/main/webapp/WEB-INF/web.xml
@@ -31,6 +31,14 @@
 		<servlet-name>view-news-item</servlet-name>
 		<servlet-class>org.javaimplant.newsfeed.Servlets.ViewNewsItemServlet</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>edit-news-item</servlet-name>
+		<servlet-class>org.javaimplant.newsfeed.Servlets.EditNewsItemServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>edit-news-item</servlet-name>
+		<url-pattern>/edit-news-item</url-pattern>
+	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>view-news-item</servlet-name>
 		<url-pattern>/view-news-item</url-pattern>
