--- a/newsfeed/src/main/webapp/WEB-INF/web.xml
+++ b/newsfeed/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,10 @@
 	<servlet>
 		<servlet-name>home</servlet-name>
 		<servlet-class>org.javaimplant.newsfeed.Servlets.HomeServlet</servlet-class>
+		<init-param>
+			<param-name>jsp</param-name>
+			<param-value>home</param-value>
+		</init-param>
 	</servlet>
 	<servlet>
 		<servlet-name>newsfeed</servlet-name>
@@ -22,26 +26,50 @@
 	<servlet>
 		<servlet-name>root</servlet-name>
 		<servlet-class>org.javaimplant.newsfeed.Servlets.RootServlet</servlet-class>
+		<init-param>
+			<param-name>jsp</param-name>
+			<param-value>home</param-value>
+		</init-param>
 	</servlet>
 	<servlet>
 		<servlet-name>list-news-item</servlet-name>
 		<servlet-class>org.javaimplant.newsfeed.Servlets.ListNewsItemsServlet</servlet-class>
+		<init-param>
+			<param-name>jsp</param-name>
+			<param-value>list-news-item</param-value>
+		</init-param>	
 	</servlet>
 	<servlet>
 		<servlet-name>view-news-item</servlet-name>
 		<servlet-class>org.javaimplant.newsfeed.Servlets.ViewNewsItemServlet</servlet-class>
+		<init-param>
+			<param-name>jsp</param-name>
+			<param-value>view-news-item</param-value>
+		</init-param>
 	</servlet>
 	<servlet>
 		<servlet-name>edit-news-item</servlet-name>
 		<servlet-class>org.javaimplant.newsfeed.Servlets.EditNewsItemServlet</servlet-class>
+		<init-param>
+			<param-name>jsp</param-name>
+			<param-value>edit-news-item</param-value>
+		</init-param>
 	</servlet>
 	<servlet>
 		<servlet-name>create-news-item</servlet-name>
 		<servlet-class>org.javaimplant.newsfeed.Servlets.CreateNewsItemServlet</servlet-class>
+		<init-param>
+			<param-name>jsp</param-name>
+			<param-value>edit-news-item</param-value>
+		</init-param>
 	</servlet>
 	<servlet>
 		<servlet-name>delete-news-item</servlet-name>
 		<servlet-class>org.javaimplant.newsfeed.Servlets.DeleteNewsItemServlet</servlet-class>
+		<init-param>
+			<param-name>jsp</param-name>
+			<param-value>delete-news-item</param-value>
+		</init-param>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>delete-news-item</servlet-name>
