--- a/newsfeed/src/main/webapp/WEB-INF/web.xml
+++ b/newsfeed/src/main/webapp/WEB-INF/web.xml
@@ -71,6 +71,18 @@
 			<param-value>delete-news-item</param-value>
 		</init-param>
 	</servlet>
+	<servlet>
+		<servlet-name>login</servlet-name>
+		<servlet-class>publisher.web.LoginServlet</servlet-class>
+		<init-param>
+			<param-name>jsp</param-name>
+			<param-value>login</param-value>
+		</init-param>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>login</servlet-name>
+		<url-pattern>/login</url-pattern>
+	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>delete-news-item</servlet-name>
 		<url-pattern>/delete-news-item</url-pattern>
