--- a/newsfeed/src/main/webapp/WEB-INF/web.xml
+++ b/newsfeed/src/main/webapp/WEB-INF/web.xml
@@ -73,7 +73,7 @@
 	</servlet>
 	<servlet>
 		<servlet-name>login</servlet-name>
-		<servlet-class>publisher.web.LoginServlet</servlet-class>
+		<servlet-class>org.javaimplant.newsfeed.Servlets.LoginServlet</servlet-class>
 		<init-param>
 			<param-name>jsp</param-name>
 			<param-value>login</param-value>
