--- a/newsfeed/src/main/webapp/WEB-INF/web.xml
+++ b/newsfeed/src/main/webapp/WEB-INF/web.xml
@@ -79,6 +79,18 @@
 			<param-value>login</param-value>
 		</init-param>
 	</servlet>
+	<servlet>
+		<servlet-name>logout</servlet-name>
+		<servlet-class>org.javaimplant.newsfeed.Servlets.LoginServlet</servlet-class>
+		<init-param>
+			<param-name>jsp</param-name>
+			<param-value>logout</param-value>
+		</init-param>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>logout</servlet-name>
+		<url-pattern>/logout</url-pattern>
+	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>login</servlet-name>
 		<url-pattern>/login</url-pattern>
