--- a/newsfeed/src/main/webapp/WEB-INF/web.xml
+++ b/newsfeed/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,14 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+	<filter>
+		<filter-name>security-filter</filter-name>
+		<filter-class>org.javaimplant.newsfeed.Filters.SecurityFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>security-filter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
    	<listener>
 		<listener-class>org.javaimplant.newsfeed.Init.Init</listener-class>
 	</listener>
@@ -81,7 +89,7 @@
 	</servlet>
 	<servlet>
 		<servlet-name>logout</servlet-name>
-		<servlet-class>org.javaimplant.newsfeed.Servlets.LoginServlet</servlet-class>
+		<servlet-class>org.javaimplant.newsfeed.Servlets.LogoutServlet</servlet-class>
 		<init-param>
 			<param-name>jsp</param-name>
 			<param-value>login</param-value>
@@ -137,4 +145,13 @@
 		<res-type>javax.sql.DataSource</res-type>
 		<res-auth>Container</res-auth>
 	</resource-ref>
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>newsfeed</web-resource-name>
+			<url-pattern>/login</url-pattern>
+		</web-resource-collection>
+		<user-data-constraint>
+			<transport-guarantee>CONFIDENTIAL</transport-guarantee>
+		</user-data-constraint>
+	</security-constraint>
 </web-app>
