--- a/voting-system/src/main/resources/application.properties
+++ b/voting-system/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
+
+logging.level.org.springframework.web=info
+logging.level.org.hibernate=info
