--- a/complaint-manager/WebContent/WEB-INF/web.xml
+++ b/complaint-manager/WebContent/WEB-INF/web.xml
@@ -8,6 +8,6 @@
   </servlet>
   <servlet-mapping>
   	<servlet-name>SpringMVCServlet</servlet-name>
-  	<url-pattern>/*.jsp</url-pattern>
+  	<url-pattern>*.jsp</url-pattern>
   </servlet-mapping>
 </web-app>
