Added functionality to register a service on server and discpver that service from another service

--- a/course-api/src/main/resources/application.properties
+++ b/course-api/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.url=jdbc:sqlite:cms.db
 spring.datasource.username=
 spring.datasource.password=
 spring.datasource.driver-class-name=org.sqlite.JDBC
+
+spring.application.name=springimplant-course-api
+server.port=8001
