Implemented Spring Config server in services

--- a/order-api/src/main/resources/application.properties
+++ b/order-api/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port=8003
+spring.application.name=springimplant-order-service
 organization.name=Spring Implant Application
 service.welcome.message=Welcome to Order Service from internal properties
+management.endpoints.web.exposure.include=*
