--- a/payment-api/src/main/resources/application.properties
+++ b/payment-api/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port=8006
+spring.application.name=springimplant-payment-service
 organization.name=Spring Implant Application
 service.welcome.message=Welcome to Payment Service from internal properties
+management.endpoints.web.exposure.include=*
