--- a/bean-lifecycle-web/pom.xml
+++ b/bean-lifecycle-web/pom.xml
@@ -32,6 +32,12 @@
             <artifactId>spring-webmvc</artifactId>
             <version>5.1.3.RELEASE</version>
         </dependency>
+        <dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>javax.servlet-api</artifactId>
+		    <version>3.1.0</version>
+		    <scope>provided</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
