--- a/SpringCloudGatwayServer/src/main/resources/application.properties
+++ b/SpringCloudGatwayServer/src/main/resources/application.properties
@@ -6,10 +6,10 @@ spring:
 		gateway:
 			routes:
 			#Route Mapping
-			- id: loginMicroservice
-			  uri: http://localhost:9002/
+			- id: loginMicroservice 	#RouteIdentifier
+			  uri: http://localhost:9002/ #Respective webservice url which need to be mapped
 			  predicates:
-			  - Path=/ecommerce/login/**
+			  - Path=/ecommerce/login/** #Request Context Path Mapping
 		  	#Route Mapping
 		  	- id: orderMicroservice
 		  	  uri: http://localhost:9001/
