Updated application Properties

--- a/SpringCloudGatwayServer/src/main/resources/application.properties
+++ b/SpringCloudGatwayServer/src/main/resources/application.properties
@@ -5,13 +5,13 @@ spring:
 	cloud:
 		gateway:
 			routes:
-			#Route Mapping
+			#Route Mapping to Voting System Project
 			- id: loginMicroservice 	#RouteIdentifier
-			  uri: http://localhost:9002/ #Respective webservice url which need to be mapped
+			  uri: http://localhost:8081/ #Respective webservice url which need to be mapped
 			  predicates:
-			  - Path=/ecommerce/login/** #Request Context Path Mapping
+			  - Path=/admin/** #Request Context Path Mapping
 		  	#Route Mapping
-		  	- id: orderMicroservice
-		  	  uri: http://localhost:9001/
+		  	- id: electionMicroservice
+		  	  uri: http://localhost:8081/
 		  	  predicates:
-		  	  - Path=/ecommerce/order/**
+		  	  - Path=/election/**
