--- a/SpringCloudGatwayServer/src/main/resources/application.properties
+++ b/SpringCloudGatwayServer/src/main/resources/application.properties
@@ -1,17 +1,19 @@
 server:
-	port:9000
-
+  port: 9000
 spring:
-	cloud:
-		gateway:
-			routes:
-			#Route Mapping to Voting System Project
-			- id: loginMicroservice 	#RouteIdentifier
-			  uri: http://localhost:8081/ #Respective webservice url which need to be mapped
-			  predicates:
-			  - Path=/admin/** #Request Context Path Mapping
-		  	#Route Mapping
-		  	- id: electionMicroservice
-		  	  uri: http://localhost:8081/
-		  	  predicates:
-		  	  - Path=/election/**
+    cloud:
+        gateway:
+            routes:
+            #Route Mapping to Voting System Project
+            #RouteIdentifier
+            - id: loginMicroservice
+            #Respective webservice url which need to be mapped
+              uri: http://localhost:8081/
+            #Request Context Path Mapping
+              predicates:
+              - Path=/admin/**
+            #Route Mapping
+            - id: electionMicroservice
+              uri: http://localhost:8081/
+              predicates:
+                - Path=/election/**
