--- a/SpringCloudGatwayServer/src/main/resources/application.yml
+++ b/SpringCloudGatwayServer/src/main/resources/application.yml
@@ -14,6 +14,6 @@ spring:
               - Path=/admin/**
             #Route Mapping
             - id: electionMicroservice
-              uri: http://localhost:8081/
+              uri: http://localhost:8082/
               predicates:
-                - Path=/election/**
+                - Path=/api/v1/**
