--- a/course-api/src/main/resources/application.properties
+++ b/course-api/src/main/resources/application.properties
@@ -7,4 +7,5 @@ spring.datasource.password=
 spring.datasource.driver-class-name=org.sqlite.JDBC
 
 spring.application.name=springimplant-course-api
-server.port=8001
+server.port=8002
+eureka.client.register-with-eureka=true
