--- a/spring-security-jwt/src/main/resources/application.yml
+++ b/spring-security-jwt/src/main/resources/application.yml
@@ -22,8 +22,8 @@ server:
 
 eureka:
   client:
-    registerWithEureka: true
-    fetchRegistry: true
+    registerWithEureka: false
+    fetchRegistry: false
 #    serviceUrl:
 #      defaultZone: http://localhost:8671/eureka/
 #    instance:
