updated spring authentication

--- a/spring-security-jwt/src/main/resources/application.yml
+++ b/spring-security-jwt/src/main/resources/application.yml
@@ -28,3 +28,7 @@ eureka:
 #      defaultZone: http://localhost:8671/eureka/
 #    instance:
 #      hostname: localhost
+
+app:
+  jwt:
+    secret: javaimplant001
