--- a/spring-security-jwt/src/main/resources/application.yml
+++ b/spring-security-jwt/src/main/resources/application.yml
@@ -10,6 +10,8 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
+      naming:
+        physical-strategy: com.springimplant.jwt.api.util.CustomDBNamingUtil
     properties:
       hibernate:
         format_sql: true
