--- a/complaint-manager/src/main/resources/database-properties.properties
+++ b/complaint-manager/src/main/resources/database-properties.properties
@@ -1,8 +1,12 @@
-jdbc.driverCLassName=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3308/complaintsystem
-jdbc.user=root
-jdbc.pass=
-
-hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#jdbc.driverCLassName=com.mysql.cj.jdbc.Driver
+jdbc.driverCLassName=org.postgresql.Driver
+#jdbc.url=jdbc:mysql://localhost:3308/complaintsystem
+#jdbc.user=root
+#jdbc.pass=
+jdbc.url=jdbc:postgresql://localhost:5432/complaintmanager
+jdbc.user=postgres
+jdbc.pass=root
+#hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql=true
 hibernate.hdm2ddl.auto=update
