--- a/complaint-manager/src/main/resources/application.yml
+++ b/complaint-manager/src/main/resources/application.yml
@@ -18,3 +18,6 @@ spring:
   datasource:
       tomcat:
        connection-properties: stringtype=unspecified
+jasypt:
+  encryptor:
+    password: springimplant
