--- a/activiti-demo/pom.xml
+++ b/activiti-demo/pom.xml
@@ -98,6 +98,14 @@
 		    <artifactId>h2</artifactId>
 		    <scope>test</scope>
 		</dependency>
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-integration</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-config</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
