--- a/complaint-manager/src/main/resources/application.yml
+++ b/complaint-manager/src/main/resources/application.yml
@@ -18,6 +18,10 @@ spring:
   datasource:
       tomcat:
        connection-properties: stringtype=unspecified
+  mvc:
+    view:
+      prefix: /WEB-INF/jsp/
+      suffix: .jsp
 jasypt:
   encryptor:
     password: springimplant
