--- a/complaint-manager/pom.xml
+++ b/complaint-manager/pom.xml
@@ -59,8 +59,13 @@
 		    <groupId>org.flywaydb</groupId>
 		    <artifactId>flyway-core</artifactId>
 	    </dependency>
-	</dependencies>
-
+    	<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>jsp-api</artifactId>
+			<version>2.1</version>
+			<scope>provided</scope>
+		</dependency>
+</dependencies>
 	<build>
 		<plugins>
 			<plugin>
@@ -74,5 +79,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
