--- a/hello-world/src/main/resources/application.properties
+++ b/hello-world/src/main/resources/application.properties
@@ -2,3 +2,12 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 server.port=8083
 spring.datasource.url=jdbc:postgresql://localhost:5432/helloworld
+spring.sql.init.mode=always
+spring.h2.console.enabled=true
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+spring.session.timeout=900
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
