--- a/spring-security-jwt/src/main/resources/application.yml
+++ b/spring-security-jwt/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/authentication
     username: postgres
-    password: root
+    password: postgres
   jpa:
     show-sql: true
     hibernate:
