--- a/complaint-manager/src/main/resources/application-local.yml
+++ b/complaint-manager/src/main/resources/application-local.yml
@@ -12,4 +12,5 @@ spring:
     properties:
       hibernate:
        dialect: org.hibernate.dialect.PostgreSQLDialect
+       format_sql: true
     open-in-view: false
