--- a/complaint-manager/src/main/resources/application.yml
+++ b/complaint-manager/src/main/resources/application.yml
@@ -6,12 +6,14 @@ spring:
       enabled: true
   jpa:
     show-sql: true
+    generate-ddl: true
     hibernate:
       ddl-auto: update
     database: POSTGRESQL
     properties:
       hibernate:
        dialect: org.hibernate.dialect.PostgreSQLDialect
+       format_sql: true
     open-in-view: false
   profiles:
     active: local
@@ -25,3 +27,4 @@ spring:
 jasypt:
   encryptor:
     password: springimplant
+    
