added docker compose and updated spring boot version

--- a/complaint-manager/src/main/resources/application.yml
+++ b/complaint-manager/src/main/resources/application.yml
@@ -24,7 +24,10 @@ spring:
     view:
       prefix: /WEB-INF/jsp/
       suffix: .jsp
-
+  docker:
+    compose:
+      enabled: true
+      file: docker-compose.yml
 logging:
   pattern:
     console: '%d{yyyy-MM-dd HH:mm:ss} [%X{correlationId}] - %msg%n'
