Added logging trace example

--- a/complaint-manager/src/main/resources/application.yml
+++ b/complaint-manager/src/main/resources/application.yml
@@ -32,11 +32,13 @@ logging:
   pattern:
     console: '%d{yyyy-MM-dd HH:mm:ss} %-5p [%-5level] [%thread] [%X{correlationId}] - %msg%n'
   level:
+    root: INFO
     '[org.hibernate]': info
     '[org.springframework.web]': info
     '[org.hibernate.sql]': debug
     '[org.hibernate.type]': trace
     '[org.hibernate.type.descriptor.sql]': trace
+    '[com.springimplant]' : TRACE
 
 jasypt:
   encryptor:
