added flyway sripts

--- a/complaint-manager/src/main/resources/application.yml
+++ b/complaint-manager/src/main/resources/application.yml
@@ -43,3 +43,8 @@ logging:
 jasypt:
   encryptor:
     password: springimplant
+
+flyway:
+  baselineOnMigrate: true
+  locations: classpath:db/migration
+  
