added google auth properties

--- a/course-api/src/main/resources/application.properties
+++ b/course-api/src/main/resources/application.properties
@@ -10,3 +10,14 @@ spring.application.name=springimplant-course-api
 server.port=8002
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+
+security.oauth2.client.clientId= 373941589680-kd77o1e9d47c6dbosrheb2bdqhlfdf454.apps.googleusercontent.com
+security.oauth2.client.clientSecret= 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546d
+security.oauth2.client.accessTokenUri  =  https://www.googleapis.com/oauth2/v3/token
+security.oauth2.client.userAuthorizationUri  =  https://accounts.google.com/o/oauth2/auth
+security.oauth2.client.tokenName = oauth_token
+security.oauth2.client.authenticationScheme = query
+security.oauth2.client.clientAuthenticationScheme = form
+security.oauth2.client.scope = profile email
+security.oauth2.resource.userInfoUri  =  https://www.googleapis.com/userinfo/v2/me
+security.oauth2.resource.preferTokenInfo = false
