--- a/currency-service/src/main/resources/application.properties
+++ b/currency-service/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 server.port=8009
 spring.application.name=springimplant-currency-service
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+spring.security.oauth2.client.registration.github.client-id=Ov23liiIncMsEh1xJehd
+spring.security.oauth2.client.registration.github.client-secret=ba5a77cd1e1439cd3e9a88dba15637e9d5411dd6
