--- a/course-api/src/main/resources/application.properties
+++ b/course-api/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.datasource.password=
 spring.datasource.driver-class-name=org.sqlite.JDBC
 
 spring.application.name=springimplant-course-api
-server.port=8002
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+server.port=8080
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 
 security.oauth2.client.clientId= 373941589680-kd77o1e9d47c6dbosrheb2bdqhl0jbg7.apps.googleusercontent.com
 security.oauth2.client.clientSecret= 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
@@ -21,5 +21,3 @@ security.oauth2.client.clientAuthenticationScheme = form
 security.oauth2.client.scope = profile email
 security.oauth2.resource.userInfoUri  =  https://www.googleapis.com/userinfo/v2/me
 security.oauth2.resource.preferTokenInfo = false
-spring.security.oauth2.client.registration.github.client-id=Ov23liiIncMsEh1xJehd
-spring.security.oauth2.client.registration.github.client-secret=c139d8b65670ed42c300d8a3e1acc5463390c11c
