--- a/course-api/src/main/resources/application.properties
+++ b/course-api/src/main/resources/application.properties
@@ -21,3 +21,5 @@ security.oauth2.client.clientAuthenticationScheme = form
 security.oauth2.client.scope = profile email
 security.oauth2.resource.userInfoUri  =  https://www.googleapis.com/userinfo/v2/me
 security.oauth2.resource.preferTokenInfo = false
+spring.security.oauth2.client.registration.github.client-id=Ov23liiIncMsEh1xJehd
+spring.security.oauth2.client.registration.github.client-secret=c139d8b65670ed42c300d8a3e1acc5463
