--- a/course-api/pom.xml
+++ b/course-api/pom.xml
@@ -105,6 +105,11 @@
     		<artifactId>tomcat-jasper</artifactId>
     		<version>9.0.82</version>
 		</dependency>
+		<dependency>
+        	<groupId>com.treblle</groupId>
+        	<artifactId>treblle-spring-boot-starter</artifactId>
+        	<version>1.0.0</version>
+    	</dependency>
 	</dependencies>
 
 	<dependencyManagement>
