Added Delivery Partner App

--- a/currency-service/src/main/resources/application.properties
+++ b/currency-service/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.Strin
 #spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.producer.properties.spring.json.type.mapping=myUser:com.springimplant.currencyservice.contract.User
+spring.kafka.producer.properties.spring.json.type.mapping=partner:com.springimplant.currencyservice.contract.DeliveryPartnerData
 
 spring.kafka.consumer.group-id=myGroup
 spring.kafka.consumer.auto-offset-reset=earliest
@@ -20,4 +21,5 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 #spring.kafka.consumer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
-spring.kafka.consumer.properties.spring.json.type.mapping=myUser:com.springimplant.currencyservice.contract.User
+spring.kafka.consumer.properties.spring.json.type.mapping=myUser1:com.springimplant.currencyservice.contract.User
+spring.kafka.consumer.properties.spring.json.type.mapping=partner:com.springimplant.currencyservice.contract.DeliveryPartnerData
