added actuator config

--- a/currency-service/src/main/resources/application.properties
+++ b/currency-service/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=8009
+management.server.port=8009
+management.endpoint.health.show-details=always
 spring.application.name=springimplant-currency-service
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
