Added Kafka Health Checker in actuator

--- a/currency-service/src/main/resources/application.properties
+++ b/currency-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8009
 management.server.port=8009
 management.endpoint.health.show-details=always
-management.endpoints.web.exposure.include=beans,mappings,sessions
+management.endpoints.web.exposure.include=beans,mappings,sessions,health
 spring.application.name=springimplant-currency-service
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
@@ -26,3 +26,5 @@ spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.seria
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 spring.kafka.consumer.properties.spring.json.type.mapping=myUser1:com.springimplant.currencyservice.contract.User
 spring.kafka.consumer.properties.spring.json.type.mapping=partner:com.springimplant.currencyservice.contract.DeliveryPartnerData
+
+kafka.health.indicator.timeout.ms=100
