Added Elastic Search

--- a/connectionpooling/src/main/resources/application.properties
+++ b/connectionpooling/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.batch.jdbc.initialize-schema=always
 spring.batch.job.enabled=false
 #spring.jpa.properties.hibernate.jdbc.batch_size = 500
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.data.elasticsearch.cluster-name=my-application
+spring.data.elasticsearch.cluster-nodes=localhost:9300
