Added Session Management using Spring JPA

--- a/complaint-manager/src/main/resources/application.properties
+++ b/complaint-manager/src/main/resources/application.properties
@@ -7,3 +7,9 @@ spring.security.oauth2.client.registration.google.client-secret=GOCSPX-YGFDb0qOc
 
 spring.security.user.name=user
 spring.security.user.password=password
+
+spring.h2.console.enabled=true
+spring.sql.init.mode=always
+#spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+spring.session.timeout=900
