--- a/emailapi/pom.xml
+++ b/emailapi/pom.xml
@@ -49,6 +49,11 @@
 			<artifactId>spring-kafka-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.springimplant</groupId>
+			<artifactId>basedomains</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
