--- a/currency-service/src/main/resources/application.properties
+++ b/currency-service/src/main/resources/application.properties
@@ -3,8 +3,8 @@ management.server.port=8009
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=beans,mappings,sessions,health
 spring.application.name=springimplant-currency-service
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 spring.security.oauth2.client.registration.github.client-id=Ov23liiIncMsEh1xJehd
 spring.security.oauth2.client.registration.github.client-secret=ba5a77cd1e1439cd3e9a88dba15637e9d5411dd6
 spring.security.oauth2.client.registration.google.client-id=373941589680-kd77o1e9d47c6dbosrhghgfhgfhnseb2bdqhl05455jbggf7.apps.googleusercontent.com
