--- a/stockapi/src/main/resources/application.properties
+++ b/stockapi/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=Stock-Api
 server.port=8004
 spring.kafka.producer.bootstrap-servers:localhost:9092
-spring.kafka.producer.key-serializer:org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer:org.springframework.kafka.support.serializer.JsonSerializer
-spring.kafka.topic.name: order_topics
-spring.kafka.consumer.group-id= stock
+spring.kafka.consumer.group-id: stock
+spring.kafka.consumer.auto-offset-reset:earliest
+spring.kafka.consumer.key-deserializer:org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer:org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+spring.kafka.topic.name=order_topics
